scheduled leraning rate

--- a/Simple_Encoder_Decoder_LSTM+velocity1.ipynb
+++ b/Simple_Encoder_Decoder_LSTM+velocity1.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_sz = 3\n",
+    "batch_sz = 4\n",
     "\n",
     "def train_agents_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
@@ -128,7 +128,7 @@
     "    def __init__(self,\n",
     "                 input_size = 4,\n",
     "                 embedding_size = 16,\n",
-    "                 hidden_size = 32):\n",
+    "                 hidden_size = 1792):\n",
     "        \n",
     "        super(EncoderRNN, self).__init__()\n",
     "        \n",
@@ -145,7 +145,7 @@
     "class DecoderRNN(nn.Module):\n",
     "    \"\"\"Decoder Network.\"\"\"\n",
     "    \"\"\"referenced from official Argoverse forecasting code: https://github.com/jagjeet-singh/argoverse-forecasting\"\"\"\n",
-    "    def __init__(self, embedding_size=16, hidden_size=32, output_size=4):\n",
+    "    def __init__(self, embedding_size=16, hidden_size=1792, output_size=4):\n",
     "        super(DecoderRNN, self).__init__()\n",
     "        self.hidden_size = hidden_size\n",
     "\n",
@@ -264,8 +264,6 @@
     "#       output = model(data)\n",
     "#         loss = MSELoss(output, target)\n",
     "        counter += 1\n",
-    "        if counter % (0.1*len(train_loader)) == 0:\n",
-    "            print(\"10% passed\")\n",
     "        iterator.set_postfix(loss=(loss.item()))\n",
     "    "
    ]
@@ -278,12 +276,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31fb663d77634561a59891ae3ad8b18d",
+       "model_id": "f6eb57fd4ca847f788342de2bc595585",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=68648), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=51486), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -304,9 +302,16 @@
     "encoder_optimizer = torch.optim.Adam(encoder.parameters())\n",
     "decoder_optimizer = torch.optim.Adam(decoder.parameters())\n",
     "\n",
-    "num_epoch = 1\n",
+    "num_epoch = 2\n",
+    "gamma = 0.5\n",
     "\n",
     "for epoch in range(1, num_epoch + 1):\n",
+    "    for param_group in encoder_optimizer.param_groups:\n",
+    "        if epoch == 2:\n",
+    "            param_group['lr'] *= gamma\n",
+    "    for param_group in decoder_optimizer.param_groups:\n",
+    "        if epoch == 2:\n",
+    "            param_group['lr'] *= gamma\n",
     "    train(encoder, decoder, device, train_all_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
     "#         train(encoder, decoder, device, train_agent_loader, encoder_optimizer, decoder_optimizer, epoch)\n",
     "#         predict(model, device, test_loader)"
@@ -460,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_csv(\"outputs1epb3_v_all.csv\", index=True)"
+    "df2.to_csv(\"outputs2epb4_v_hidden1792_all_gamma5.csv\", index=True)"
    ]
   },
   {
